@@ -4,10 +4,10 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: BaseVersion.hs,v 1.42 2003/10/19 07:07:48 chak Exp $"
+idstr      = "$Id: BaseVersion.hs,v 1.43 2003/10/19 10:45:27 chak Exp $"
 name       = "Compiler Toolkit"
-versnum    = "0.25.1"
-date	   = "10 Jun 2003"
+versnum    = "0.26.0"
+date	   = "19 Oct 2003"
 version    = name ++ ", version " ++ versnum ++ ", " ++ date
 copyright  = "Copyright (c) [1995..2003] Manuel M T Chakravarty"
 disclaimer = "This software is distributed under the \
