@@ -1,3 +1,12 @@
+2003-10-19  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
+
+	* sysdep/Makefile: Posix (and hence, `runPiped') support disabled,
+	as `runPiped' (1) isn't really used at the moment, (2) should be
+	rewritten anyway, and (3) breaks with GHC 6.3 as the signature of
+	`forkProcess' changed.
+
+	* admin/BaseVersion.hs (versnum): 0.26.0
+
 2003-06-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
 
 	* ../mk/common.mk (MKDEPENDFILES): defined ghc6
